fixed overlapping problem in skills styles

--- a/css/skills-styles.css
+++ b/css/skills-styles.css
@@ -1,4 +1,8 @@
 .skills-container {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: grid;
     align-items: center;
     justify-content: center;
@@ -6,7 +10,7 @@
     grid-template-rows: 1fr 1fr;
     border-radius: 30px;
     width: 90%;
-    height: 100%;
+    height: 85%;
     min-height: 85vh;
     margin: 50px auto;
 }
